Revert "fixup! Image blur cutoff"
This reverts commit 8ee70c325dad448e0abaa1df81ee1b584098c041.

--- a/frontend/src/Movie/MovieImage.css
+++ b/frontend/src/Movie/MovieImage.css
@@ -1,7 +1,3 @@
 .blur {
   filter: blur(13px);
 }
-
-.container {
-  overflow: hidden;
-}
